Set rollingUpdate to null when updateStrategy is Recreate
Signed-off-by: juan131 <juan@bitnami.com>

--- a/bitnami/cassandra/templates/statefulset.yaml
+++ b/bitnami/cassandra/templates/statefulset.yaml
@@ -16,7 +16,9 @@ spec:
   replicas: {{ .Values.cluster.replicaCount }}
   updateStrategy:
     type: {{ .Values.statefulset.updateStrategy }}
-    {{- if .Values.statefulset.rollingUpdatePartition }}
+    {{- if (eq "Recreate" .Values.statefulset.updateStrategy) }}
+    rollingUpdate: null
+    {{- else if .Values.statefulset.rollingUpdatePartition }}
     rollingUpdate:
       partition: {{ .Values.statefulset.rollingUpdatePartition }}
     {{- end }}
