--- a/bitnami/mysql/values.yaml
+++ b/bitnami/mysql/values.yaml
@@ -88,6 +88,10 @@ replication:
 
 master:
   antiAffinity: soft
+  ## updateStrategy for MySQL Master StatefulSet
+  ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#update-strategies
+  updateStrategy:
+    type: RollingUpdate
   ## Enable persistence using Persistent Volume Claims
   ## ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
   ##
@@ -177,6 +181,10 @@ master:
 slave:
   replicas: 1
   antiAffinity: soft
+  ## updateStrategy for MySQL Slave StatefulSet
+  ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#update-strategies
+  updateStrategy:
+    type: RollingUpdate
   persistence:
     ## If true, use a Persistent Volume Claim, If false, use emptyDir
     ##
