--- a/bitnami/zookeeper/templates/svc-headless.yaml
+++ b/bitnami/zookeeper/templates/svc-headless.yaml
@@ -7,6 +7,7 @@ metadata:
     chart: {{ template "zookeeper.chart" . }}
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
+    app.kubernetes.io/component: {{ template "zookeeper.name" . }}
 spec:
   type: ClusterIP
   clusterIP: None
@@ -23,3 +24,4 @@ spec:
   selector:
     app: {{ template "zookeeper.name" . }}
     release: {{ .Release.Name | quote }}
+    app.kubernetes.io/component: {{ template "zookeeper.name" . }}
