--- a/bitnami/kafka/values.yaml
+++ b/bitnami/kafka/values.yaml
@@ -152,6 +152,9 @@ socketSendBufferBytes: 102400
 ## Timeout in ms for connecting to zookeeper.
 zookeeperConnectionTimeoutMs: 6000
 
+## The endpoint identification algorithm to validate server hostname using server certificate.
+sslEndpointIdentificationAlgorithm	: https
+
 ## Authentication parameteres
 ## https://github.com/bitnami/bitnami-docker-kafka#security
 ##
@@ -227,11 +230,20 @@ persistence:
   size: 8Gi
   annotations: {}
 
-## Node labels and tolerations for pod assignment
-## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
-## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
+## Node labels for pod assignment
+## Ref: https://kubernetes.io/docs/user-guide/node-selection/
+##
 nodeSelector: {}
+
+## Tolerations for pod assignment
+## Ref: https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/
+##
 tolerations: []
+
+## Affinity for pod assignment
+## Ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
+##
+affinity: {}
 
 ## Configure resource requests and limits
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
