Set metadata labels
Set the instance and component lables on all resources accordingly.

Signed-off-by: Simon Rüegg <simon.ruegg@vshn.ch>

--- a/bitnami/zookeeper/templates/metrics-svc.yaml
+++ b/bitnami/zookeeper/templates/metrics-svc.yaml
@@ -9,6 +9,7 @@ metadata:
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
     app.kubernetes.io/component: {{ template "zookeeper.name" . }}-metrics
+    app.kubernetes.io/instance: {{ .Release.Name | quote }}
 spec:
   type: ClusterIP
   ports:
