--- a/bitnami/zookeeper/templates/metrics-deployment.yaml
+++ b/bitnami/zookeeper/templates/metrics-deployment.yaml
@@ -9,6 +9,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
     app.kubernetes.io/component: {{ template "zookeeper.name" . }}-metrics
+    app.kubernetes.io/instance: {{ .Release.Name | quote }}
 spec:
   replicas: 1
   selector:
@@ -23,6 +24,7 @@ spec:
         app: {{ template "zookeeper.name" . }}
         release: "{{ .Release.Name }}"
         app.kubernetes.io/component: {{ template "zookeeper.name" . }}-metrics
+        app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
 {{- include "zookeeper.imagePullSecrets" . | indent 6 }}
       containers:
