--- a/bitnami/mean/Chart.yaml
+++ b/bitnami/mean/Chart.yaml
@@ -3,6 +3,7 @@ name: mean
 version: 6.1.1
 appVersion: 4.6.2
 description: MEAN is a free and open-source JavaScript software stack for building dynamic web sites and web applications. The MEAN stack is MongoDB, Express.js, Angular, and Node.js. Because all components of the MEAN stack support programs written in JavaScript, MEAN applications can be written in one language for both server-side and client-side execution environments.
+deprecated: 'This chart is deprecated and will be removed at 24 April 2019. Use instead Node Chart.'
 keywords:
 - node
 - javascript
