Set ZooKeeper exporter connection timeout
Usually a metrics endpoint is scraped with an interval of between 10s -
1m, so a lower connection timeout makes sense.

Signed-off-by: Simon Rüegg <simon.ruegg@vshn.ch>

WIP

--- a/bitnami/zookeeper/values-production.yaml
+++ b/bitnami/zookeeper/values-production.yaml
@@ -205,6 +205,8 @@ metrics:
     prometheus.io/port: "9141"
   podLabels: {}
 
+  timeoutSeconds: 3
+
   ## Metrics exporter resource requests and limits
   ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
   ##
