--- a/bitnami/zookeeper/values.yaml
+++ b/bitnami/zookeeper/values.yaml
@@ -31,6 +31,12 @@ image:
   ##
   debug: false
 
+## String to partially override zookeeper.fullname template (will maintain the release name)
+# nameOverride:
+
+## String to fully override zookeeper.fullname template
+# fullnameOverride:
+
 ## StatefulSet controller supports automated updates. There are two valid update strategies: RollingUpdate and OnDelete
 ## ref: https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/#updating-statefulsets
 ##
