Use 'Parallel' podManagementPolicy
Signed-off-by: juan131 <juan@bitnami.com>

--- a/bitnami/minio/templates/statefulset.yaml
+++ b/bitnami/minio/templates/statefulset.yaml
@@ -17,6 +17,7 @@ spec:
       app.kubernetes.io/instance: {{ .Release.Name }}
   serviceName: {{ include "minio.fullname" . }}-headless
   replicas: {{ .Values.statefulset.replicaCount }}
+  podManagementPolicy: {{ .Values.statefulset.podManagementPolicy | quote }}
   updateStrategy:
     type: {{ .Values.statefulset.updateStrategy }}
     {{- if (eq "Recreate" .Values.statefulset.updateStrategy) }}
