--- a/bitnami/minio/values.yaml
+++ b/bitnami/minio/values.yaml
@@ -50,6 +50,11 @@ statefulset:
   ##
   updateStrategy: RollingUpdate
 
+  ## StatefulSet controller supports relax its ordering guarantees while preserving its uniqueness and identity guarantees. There are two valid pod management policies: OrderedReady and Parallel
+  ## ref: https://kubernetes.io/docs/tutorials/stateful-application/basic-stateful-set/#pod-management-policy
+  ##
+  podManagementPolicy: Parallel
+
   ## Number of replicas, it must even and greater than 4
   ##
   replicaCount: 4
