--- a/bitnami/minio/Chart.yaml
+++ b/bitnami/minio/Chart.yaml
@@ -7,6 +7,7 @@ keywords:
 - storage
 - object-storage
 - s3
+- cluster
 name: minio
 home: https://min.io
 icon: https://bitnami.com/assets/stacks/minio/img/minio-stack-220x234.png
