Add global values for MinIO Access&Secret keys

--- a/bitnami/minio/templates/secrets.yaml
+++ b/bitnami/minio/templates/secrets.yaml
@@ -10,18 +10,6 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
 data:
-  {{- if .Values.accessKey.password }}
-  access-key: {{ .Values.accessKey.password | b64enc }}
-  {{- else if (not .Values.accessKey.forcePassword) }}
-  access-key: {{ randAlphaNum 10 | b64enc }}
-  {{- else }}
-  access-key: {{ required "An Access Key is required!" .Values.accessKey.password }}
-  {{- end }}
-  {{- if .Values.secretKey.password }}
-  secret-key: {{ .Values.secretKey.password | b64enc }}
-  {{- else if (not .Values.secretKey.forcePassword) }}
-  secret-key: {{ randAlphaNum 40 | b64enc }}
-  {{- else }}
-  secret-key: {{ required "A Secret Key is required!" .Values.secretKey.password }}
-  {{- end }}
+  access-key: {{ include "minio.accessKey" . | b64enc | quote }}
+  secret-key: {{ include "minio.secretKey" . | b64enc | quote }}
 {{- end }}
