Remove 'forcePassword' global parameter

--- a/bitnami/minio/values-production.yaml
+++ b/bitnami/minio/values-production.yaml
@@ -6,12 +6,8 @@ global:
   minio: {}
 #  minio:
 #    existingSecret: ""
-#    accessKey:
-#      password: "my-access-key"
-#      forcePassword: false
-#    secretKey:
-#      password: "my-secret-key"
-#      forcePassword: false
+#    accessKey: ""
+#    secretKey: ""
 #  imageRegistry: myRegistryName
 #  imagePullSecrets:
 #    - myRegistryKeySecretName
