--- a/bitnami/apache/values.yaml
+++ b/bitnami/apache/values.yaml
@@ -53,21 +53,15 @@ ingress:
   ## The list of hostnames to be covered with this ingress record.
   ## Most likely this will be just one host, but in the event more hosts are needed, this is an array
   hosts:
-  - name: apache.local
+  - name: example.local
     path: /
 
-    ## Set this to true in order to enable TLS on the ingress record
-    tls: false
-
-    ## Optionally specify the TLS hosts for the ingress record
-    ## Useful when the Ingress controller supports www-redirection
-    ## If not specified, the above host name will be used
-    # tlsHosts:
-    # - www.apache.local
-    # - apache.local
-
-    ## If TLS is set to true, you must declare what secret will store the key/certificate for TLS
-    tlsSecret: apache.local-tls
+  ## The tls configuration for the ingress
+  ## see: https://kubernetes.io/docs/concepts/services-networking/ingress/#tls
+  tls:
+  - hosts:
+      - example.local
+    secretName: example.local-tls
 
   secrets:
   ## If you're providing your own certificates, please use this to add the certificates as secrets
