--- a/bitnami/airflow/templates/secrets.yaml
+++ b/bitnami/airflow/templates/secrets.yaml
@@ -12,12 +12,16 @@ type: Opaque
 data:
   {{- if .Values.airflow.auth.airflowPassword }}
   airflow-password: {{ .Values.airflow.auth.airflowPassword | b64enc | quote }}
-  {{ else }}
+  {{ else if (not .Values.airflow.auth.forcePassword) }}
   airflow-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ else }}
+  airflow-password: {{ required "An Airflow Password is required!" .Values.airflow.auth.airflowPassword }}
   {{- end }}
   {{- if .Values.airflow.auth.fernetKey }}
   airflow-fernetKey: {{ .Values.airflow.auth.fernetKey | b64enc | quote }}
-  {{ else }}
+  {{ else if (not .Values.airflow.auth.forcePassword) }}
   airflow-fernetKey: {{ randAlphaNum 32 | b64enc | b64enc | quote }}
+  {{ else }}
+  airflow-fernetKey: {{ required "An Airflow Fernet Key is required!" .Values.airflow.auth.fernetKey }}
   {{- end }}
 {{- end }}
