--- a/bitnami/minio/templates/statefulset.yaml
+++ b/bitnami/minio/templates/statefulset.yaml
@@ -104,11 +104,7 @@ spec:
               key: secret-key
         {{- end }}
         - name: MINIO_BROWSER
-          {{- if .Values.disableWebUI }}
-          value: "off"
-          {{- else }}
-          value: "on"
-          {{- end }}
+          value: {{ ternary "off" "on" .Values.disableWebUI }}
 {{- if .Values.extraEnv }}
 {{ toYaml .Values.extraEnv | indent 8 }}
 {{- end }}
