Add javsalgar feedback

--- a/bitnami/airflow/templates/secrets.yaml
+++ b/bitnami/airflow/templates/secrets.yaml
@@ -10,12 +10,12 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
 data:
-  {{- if .Values.airflow.auth.airflowPassword }}
-  airflow-password: {{ .Values.airflow.auth.airflowPassword | b64enc | quote }}
+  {{- if .Values.airflow.auth.password }}
+  airflow-password: {{ .Values.airflow.auth.password | b64enc | quote }}
   {{ else if (not .Values.airflow.auth.forcePassword) }}
   airflow-password: {{ randAlphaNum 10 | b64enc | quote }}
   {{ else }}
-  airflow-password: {{ required "An Airflow Password is required!" .Values.airflow.auth.airflowPassword }}
+  airflow-password: {{ required "An Airflow Password is required!" .Values.airflow.auth.password }}
   {{- end }}
   {{- if .Values.airflow.auth.fernetKey }}
   airflow-fernetKey: {{ .Values.airflow.auth.fernetKey | b64enc | quote }}
