--- a/bitnami/zookeeper/templates/statefulset.yaml
+++ b/bitnami/zookeeper/templates/statefulset.yaml
@@ -7,8 +7,10 @@ metadata:
     chart: {{ template "zookeeper.chart" . }}
     release: {{ .Release.Name | quote }}
     heritage: {{ .Release.Service | quote }}
-    app.kubernetes.io/component: {{ template "zookeeper.name" . }}
+    app.kubernetes.io/name: {{ template "zookeeper.name" . }}
+    helm.sh/chart: {{ template "zookeeper.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name | quote }}
+    app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
 spec:
   serviceName: {{ template "zookeeper.fullname" . }}-headless
   replicas: {{ .Values.replicaCount }}
@@ -25,7 +27,8 @@ spec:
     matchLabels:
       app: {{ template "zookeeper.name" . }}
       release: {{ .Release.Name | quote }}
-      app.kubernetes.io/component: {{ template "zookeeper.name" . }}
+      app.kubernetes.io/name: {{ template "zookeeper.name" . }}
+      app.kubernetes.io/instance: {{ .Release.Name | quote }}
   template:
     metadata:
       name: "{{ template "zookeeper.fullname" . }}"
@@ -33,8 +36,8 @@ spec:
         app: {{ template "zookeeper.name" . }}
         chart: {{ template "zookeeper.chart" . }}
         release: {{ .Release.Name | quote }}
-        heritage: {{ .Release.Service | quote }}
-        app.kubernetes.io/component: {{ template "zookeeper.name" . }}
+        app.kubernetes.io/name: {{ template "zookeeper.name" . }}
+        helm.sh/chart: {{ template "zookeeper.chart" . }}
         app.kubernetes.io/instance: {{ .Release.Name | quote }}
     spec:
 {{- include "zookeeper.imagePullSecrets" . | indent 6 }}
